Add test logging.