@@ -7,6 +7,8 @@ plugins {
 group = 'com.wikia.tibia'
 version = '1.2.0'
 description = 'TibiaWikiBot'
+sourceCompatibility = '14'
+targetCompatibility = '14'
 
 repositories {
     mavenLocal()
@@ -40,8 +42,6 @@ sonarqube {
     }
 }
 
-sourceCompatibility = 14
-
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     options.compilerArgs += '--enable-preview'
@@ -49,4 +49,13 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     jvmArgs += "--enable-preview"
+    useJUnit()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
